src/styles/layout.scss
/**
 * @author Ben Siebert
 * @copyright 2018-2021 Ben Siebert. All rights reserved.
 */

html,
body {
  height: 100%;
  margin: 0;
  background-color: #1E1E1E;
  overflow: hidden;
}

#blockly {
  height: 95%;
}

#blocklyDiv {
  height: 95%;
}
#menuBar {
  width: 100%;
  // min-height: 5%;
  height: 10%;
  display: none;
}

